Revision history for Test-Warnings

{{$NEXT}}
          - prereqs lowered from required to suggested:
            - CPAN::Meta::Check
            - CPAN::Meta::Requirements

0.024     2015-12-24 18:44:29Z
          - remove diagnostics accidentally left in new test

0.023     2015-12-22 06:44:24Z
          - properly handle propagating warnings to previously declared
            handlers that are not coderefs (i.e. a sub name, or the magic
            DEFAULT and IGNORE)

0.022     2015-12-19 00:32:42Z
          - propagate all warnings to any previously-declared __WARN__
            handlers (unlike with __DIE__, merely calling warn() is not
            sufficient)

0.021     2015-03-21 18:48:27Z
          - add a x_breaks entry for conflicting versions of File::pushd which
            inadvertently call our exported warnings() rather than invoking
            warnings.pm, and documented this undesired interaction

0.020     2015-01-03 20:32:21Z
          - re-release to fix problematic $VERSION declaration (RT#101239)

0.019     2014-12-18 20:07:02Z
          - fix test to allow for special characters (e.g. MSWin32 file
            separators) in filenames (A. Sinan Unur, PR#7)

0.018     2014-12-17 18:17:30Z
          - fix test to not depend on message formatting changes in newer Carp

0.017     2014-12-16 20:17:22Z
          - handle other warning handlers passing us partial warning messages
            by re-adding the source file and line number

0.016     2014-06-21 04:04:55Z
          - fix prereq problem with last release - now no longer testing the
            example scripts for user installs

0.015     2014-06-20 03:36:33Z
          - adjusted packaging and tests to become perl-5.6 friendly,
            including only using core or dual-lifed prerequisites

0.014     2014-03-01 22:08:26Z
          - fix test that was failing when FOO or BAR environment variables
            were set (RT#93447)

0.013     2013-12-14 21:26:06Z