@@ -4,11 +4,16 @@ copyright_holder    = Karen Etheridge
 copyright_year      = 2013
 license             = Perl_5
 
+[FileFinder::Filter / all_files_but_SilenceStderr]
+finder = :TestFiles
+skip = t/lib/SilenceStderr.pm
+
 [@Author::ETHER]
 :version = 0.103
 installer = MakeMaker       ; stay 5.6-friendly
 Git::GatherDir.exclude_filename[] = blog_20130309.md
 Test::MinimumVersion.max_target_perl = 5.006
+MinimumPerl.test_finder = all_files_but_SilenceStderr
 ; we have our own patched version of these tests,
 ; to work around Test::Warnings adding an END check
 -remove = PodCoverageTests
@@ -56,3 +61,8 @@ filename = xt/author/examples_test_warning_contents.t
 content_is_template = 1
 content = # generated from examples/test_warning_contents.t
 content = {{ use Path::Tiny; path('examples/test_warning_contents.t')->slurp_raw; }}
+
+; TODO: make this an option of [Test::MinimumVersion]
+[Substitute]
+file = xt/release/minimum-version.t
+code = s/^(all_minimum_version_ok\([^)]+)(\s*\);)/$1, { skip => ["t\/lib\/SilenceStderr.pm"] }$2/
