@@ -8,6 +8,8 @@ pass 'here is a passing test, to keep plan happy';
 BEGIN { $ENV{FOO} = $ENV{BAR} = 0 };
 use if $ENV{FOO} || $ENV{BAR}, 'Test::Warnings';
 
+use lib 't/lib'; use SilenceStderr;
+
 warn 'this is not a fatal warning, because Test::Warnings is not loaded';
 
 done_testing;
