@@ -9,6 +9,7 @@ END {
 
 use Test::Warnings 'warning';       # should not add an END test
 use Test::Warnings ':no_end_test';
+use lib 't/lib'; use SilenceStderr;
 
 warn 'this warning is not expected to be caught';
 
