@@ -12,6 +12,7 @@ BEGIN {
 }
 
 use Test::Warnings qw(:all :no_end_test);
+use lib 't/lib'; use SilenceStderr;
 
 warn 'this warning is not expected to be caught';
 
